acm-dev-git-repo-import.yaml
cat <<EOF | oc apply -f -
apiVersion: v1
kind: Namespace
metadata:
  name: default
  labels:
    app: oc-files
