event-listener-dev-app1.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: git-dev-app1-listener
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: el-git-dev-app1-listener
    weight: 100---
apiVersion: v1
kind: ServiceAccount
metadata:
  name: events-account
#---
#kind: Role
#apiVersion: rbac.authorization.k8s.io/v1
#metadata:
#  name: events-account
#rules:
## Permissions for every EventListener deployment to function
#- apiGroups: ["triggers.tekton.dev"]
#  resources: ["eventlisteners", "triggerbindings", "triggertemplates"]
#  verbs: ["get"]
#- apiGroups: [""]
#  resources: ["configmaps"]
#  verbs: ["get", "list", "watch"]
## Permissions to create resources in associated TriggerTemplates
#- apiGroups: ["tekton.dev"]
#  resources: ["pipelineruns"]
#  verbs: ["create"]
#---
#apiVersion: rbac.authorization.k8s.io/v1
#kind: RoleBinding
#metadata:
#  name: events-account
#subjects:
#- kind: ServiceAccount
#  name: events-account
#roleRef:
#  apiGroup: rbac.authorization.k8s.io
#  kind: Role
#  name: events-account
